--- a/mobile/index.html
+++ b/mobile/index.html
@@ -135,235 +135,211 @@
 </head>
 
 <body>
-    <div class="container">
+<div class="container">
 
-        <div class="header">
-            <img src="/icon-256.png" class="logo">
-            <h1>CycleCal</h1>
-            <span class="version">v1.2.0-alpha</span>
-        </div>
-
-        <div class="line"></div>
-
-        <div class="controls">
-            <button onclick="mesAnterior()">◀</button>
-            <strong id="titulo"></strong>
-            <button onclick="proximoMes()">▶</button>
-        </div>
-
-        <div class="calendar" id="calendario"></div>
-
-        <div class="footer">
-            Base de cálculo: 15/02/2026 (domingo de folga)
-            <div class="holidays" id="listaFeriados"></div>
-        </div>
-
+    <div class="header">
+        <img src="/icon-256.png" class="logo">
+        <h1>CycleCal</h1>
+        <span class="version">v1.2.0-alpha</span>
     </div>
 
-    <script>
-        let hoje = new Date();
-        let anoAtual = hoje.getFullYear();
-        let mesAtual = hoje.getMonth();
+    <div class="line"></div>
 
-        const baseFolgaDomingo = new Date(2026, 1, 15);
+    <div class="controls">
+        <button onclick="mesAnterior()">◀</button>
+        <strong id="titulo"></strong>
+        <button onclick="proximoMes()">▶</button>
+    </div>
 
-        /* ===== FERIADOS FIXOS ===== */
+    <div class="calendar" id="calendario"></div>
 
-        const feriadosNacionais = [
-            { dia: 1, mes: 0, nome: "Confraternização Universal" },
-            { dia: 21, mes: 3, nome: "Tiradentes" },
-            { dia: 1, mes: 4, nome: "Dia do Trabalho" },
-            { dia: 7, mes: 8, nome: "Independência do Brasil" },
-            { dia: 12, mes: 9, nome: "Nossa Senhora Aparecida" },
-            { dia: 2, mes: 10, nome: "Finados" },
-            { dia: 15, mes: 10, nome: "Proclamação da República" },
-            { dia: 25, mes: 11, nome: "Natal" }
-        ];
+    <div class="footer">
+        Base de cálculo: 15/02/2026 (domingo de folga)
+        <div class="holidays" id="listaFeriados"></div>
+    </div>
 
-        const feriadosCuritiba = [
-            { dia: 8, mes: 8, nome: "Nossa Senhora da Luz dos Pinhais" }
-        ];
+</div>
 
-        const feriadosFixos = [...feriadosNacionais, ...feriadosCuritiba];
+<script>
+let hoje = new Date();
+let anoAtual = hoje.getFullYear();
+let mesAtual = hoje.getMonth();
 
-        /* ===== FERIADOS MÓVEIS ===== */
+const baseFolgaDomingo = new Date(2026, 1, 15);
 
-        function calcularPascoa(ano) {
-            const a = ano % 19;
-            const b = Math.floor(ano / 100);
-            const c = ano % 100;
-            const d = Math.floor(b / 4);
-            const e = b % 4;
-            const f = Math.floor((b + 8) / 25);
-            const g = Math.floor((b - f + 1) / 3);
-            const h = (19 * a + b - d - g + 15) % 30;
-            const i = Math.floor(c / 4);
-            const k = c % 4;
-            const l = (32 + 2 * e + 2 * i - h - k) % 7;
-            const m = Math.floor((a + 11 * h + 22 * l) / 451);
+/* ===== FERIADOS FIXOS ===== */
 
-            const mes = Math.floor((h + l - 7 * m + 114) / 31);
-            const dia = ((h + l - 7 * m + 114) % 31) + 1;
+const feriadosNacionais = [
+    { dia: 1, mes: 0, nome: "Confraternização Universal" },
+    { dia: 21, mes: 3, nome: "Tiradentes" },
+    { dia: 1, mes: 4, nome: "Dia do Trabalho" },
+    { dia: 7, mes: 8, nome: "Independência do Brasil" },
+    { dia: 12, mes: 9, nome: "Nossa Senhora Aparecida" },
+    { dia: 2, mes: 10, nome: "Finados" },
+    { dia: 15, mes: 10, nome: "Proclamação da República" },
+    { dia: 20, mes: 10, nome: "Dia da Consciência Negra" },
+    { dia: 25, mes: 11, nome: "Natal" }
+];
 
-            return new Date(ano, mes - 1, dia);
+const feriadosCuritiba = [
+    { dia: 8, mes: 8, nome: "Nossa Senhora da Luz dos Pinhais" }
+];
+
+const feriadosFixos = [...feriadosNacionais, ...feriadosCuritiba];
+
+/* ===== FERIADOS MÓVEIS ===== */
+
+function calcularPascoa(ano) {
+    const a = ano % 19;
+    const b = Math.floor(ano / 100);
+    const c = ano % 100;
+    const d = Math.floor(b / 4);
+    const e = b % 4;
+    const f = Math.floor((b + 8) / 25);
+    const g = Math.floor((b - f + 1) / 3);
+    const h = (19 * a + b - d - g + 15) % 30;
+    const i = Math.floor(c / 4);
+    const k = c % 4;
+    const l = (32 + 2 * e + 2 * i - h - k) % 7;
+    const m = Math.floor((a + 11 * h + 22 * l) / 451);
+
+    const mes = Math.floor((h + l - 7 * m + 114) / 31);
+    const dia = ((h + l - 7 * m + 114) % 31) + 1;
+
+    return new Date(ano, mes - 1, dia);
+}
+
+function gerarFeriadosMoveis(ano) {
+    const pascoa = calcularPascoa(ano);
+
+    const sextaSanta = new Date(pascoa);
+    sextaSanta.setDate(pascoa.getDate() - 2);
+
+    const corpusChristi = new Date(pascoa);
+    corpusChristi.setDate(pascoa.getDate() + 60);
+
+    return [
+        { dia: sextaSanta.getDate(), mes: sextaSanta.getMonth(), nome: "Sexta-feira Santa" },
+        { dia: pascoa.getDate(), mes: pascoa.getMonth(), nome: "Páscoa" },
+        { dia: corpusChristi.getDate(), mes: corpusChristi.getMonth(), nome: "Corpus Christi" }
+    ];
+}
+
+function ehFeriado(data, lista) {
+    return lista.find(f =>
+        f.dia === data.getDate() &&
+        f.mes === data.getMonth()
+    );
+}
+
+/* ===== FUNÇÃO ATUALIZADA COM ORDENAÇÃO ===== */
+
+function listarFeriadosDoMes(ano, mes, lista) {
+    const listaDiv = document.getElementById("listaFeriados");
+    listaDiv.innerHTML = "";
+
+    const feriadosDoMes = lista
+        .filter(f => f.mes === mes)
+        .sort((a, b) => a.dia - b.dia);
+
+    feriadosDoMes.forEach(f => {
+        const div = document.createElement("div");
+        div.innerText =
+            `${String(f.dia).padStart(2,'0')}/` +
+            `${String(f.mes + 1).padStart(2,'0')} – ${f.nome}`;
+        listaDiv.appendChild(div);
+    });
+}
+
+function ehFolga(data) {
+    if (data.getDay() === 4) return true;
+
+    if (data.getDay() === 0) {
+        const diff = Math.floor((data - baseFolgaDomingo) / (1000 * 60 * 60 * 24));
+        const semanas = Math.floor(diff / 7);
+        return semanas % 3 === 0;
+    }
+
+    return false;
+}
+
+function gerarCalendario(ano, mes) {
+    const calendario = document.getElementById("calendario");
+    calendario.innerHTML = "";
+
+    document.getElementById("titulo").innerText = (mes + 1) + "/" + ano;
+
+    const diasSemana = ["Dom","Seg","Ter","Qua","Qui","Sex","Sáb"];
+
+    diasSemana.forEach(d => {
+        const el = document.createElement("div");
+        el.className = "header-day";
+        el.innerText = d;
+        calendario.appendChild(el);
+    });
+
+    const primeiroDia = new Date(ano, mes, 1);
+    const inicio = primeiroDia.getDay();
+    const diasNoMes = new Date(ano, mes + 1, 0).getDate();
+
+    const feriadosMoveis = gerarFeriadosMoveis(ano);
+    const todosFeriados = [...feriadosFixos, ...feriadosMoveis];
+
+    for (let i = 0; i < inicio; i++) {
+        calendario.appendChild(document.createElement("div"));
+    }
+
+    for (let dia = 1; dia <= diasNoMes; dia++) {
+        const data = new Date(ano, mes, dia);
+        const el = document.createElement("div");
+        el.className = "day";
+
+        const span = document.createElement("span");
+        span.innerText = dia;
+        el.appendChild(span);
+
+        if (ehFolga(data)) el.classList.add("folga");
+        if (ehFeriado(data, todosFeriados)) el.classList.add("holiday");
+
+        if (
+            dia === hoje.getDate() &&
+            mes === hoje.getMonth() &&
+            ano === hoje.getFullYear()
+        ) {
+            el.classList.add("today");
         }
 
-        function gerarFeriadosMoveis(ano) {
-            const pascoa = calcularPascoa(ano);
+        calendario.appendChild(el);
+    }
 
-            const sextaSanta = new Date(pascoa);
-            sextaSanta.setDate(pascoa.getDate() - 2);
+    listarFeriadosDoMes(ano, mes, todosFeriados);
+}
 
-            const corpusChristi = new Date(pascoa);
-            corpusChristi.setDate(pascoa.getDate() + 60);
+function proximoMes() {
+    mesAtual++;
+    if (mesAtual > 11) {
+        mesAtual = 0;
+        anoAtual++;
+    }
+    gerarCalendario(anoAtual, mesAtual);
+}
 
-            return [
-                { dia: sextaSanta.getDate(), mes: sextaSanta.getMonth(), nome: "Sexta-feira Santa" },
-                { dia: pascoa.getDate(), mes: pascoa.getMonth(), nome: "Páscoa" },
-                { dia: corpusChristi.getDate(), mes: corpusChristi.getMonth(), nome: "Corpus Christi" }
-            ];
-        }
+function mesAnterior() {
+    mesAtual--;
+    if (mesAtual < 0) {
+        mesAtual = 11;
+        anoAtual--;
+    }
+    gerarCalendario(anoAtual, mesAtual);
+}
 
-        function ehFeriado(data, lista) {
-            return lista.find(f =>
-                f.dia === data.getDate() &&
-                f.mes === data.getMonth()
-            );
-        }
+gerarCalendario(anoAtual, mesAtual);
 
-        function listarFeriadosDoMes(ano, mes, lista) {
-            const listaDiv = document.getElementById("listaFeriados");
-            listaDiv.innerHTML = "";
+if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("/sw.js");
+}
+</script>
 
-            lista.filter(f => f.mes === mes).forEach(f => {
-                const div = document.createElement("div");
-                div.innerText =
-                    `${String(f.dia).padStart(2,'0')}/` +
-                    `${String(f.mes + 1).padStart(2,'0')} – ${f.nome}`;
-                listaDiv.appendChild(div);
-            });
-        }
-
-        function ehFolga(data) {
-            if (data.getDay() === 4) return true;
-
-            if (data.getDay() === 0) {
-                const diff = Math.floor(
-                    (data - baseFolgaDomingo) / (1000 * 60 * 60 * 24)
-                );
-                const semanas = Math.floor(diff / 7);
-                return semanas % 3 === 0;
-            }
-
-            return false;
-        }
-
-        function gerarCalendario(ano, mes) {
-            const calendario = document.getElementById("calendario");
-            calendario.innerHTML = "";
-
-            document.getElementById("titulo").innerText =
-                (mes + 1) + "/" + ano;
-
-            const diasSemana = ["Dom","Seg","Ter","Qua","Qui","Sex","Sáb"];
-
-            diasSemana.forEach(d => {
-                const el = document.createElement("div");
-                el.className = "header-day";
-                el.innerText = d;
-                calendario.appendChild(el);
-            });
-
-            const primeiroDia = new Date(ano, mes, 1);
-            const inicio = primeiroDia.getDay();
-            const diasNoMes = new Date(ano, mes + 1, 0).getDate();
-
-            const feriadosMoveis = gerarFeriadosMoveis(ano);
-            const todosFeriados = [...feriadosFixos, ...feriadosMoveis];
-
-            for (let i = 0; i < inicio; i++) {
-                calendario.appendChild(document.createElement("div"));
-            }
-
-            for (let dia = 1; dia <= diasNoMes; dia++) {
-                const data = new Date(ano, mes, dia);
-                const el = document.createElement("div");
-                el.className = "day";
-
-                const span = document.createElement("span");
-                span.innerText = dia;
-                el.appendChild(span);
-
-                if (ehFolga(data)) el.classList.add("folga");
-                if (ehFeriado(data, todosFeriados)) el.classList.add("holiday");
-
-                if (
-                    dia === hoje.getDate() &&
-                    mes === hoje.getMonth() &&
-                    ano === hoje.getFullYear()
-                ) {
-                    el.classList.add("today");
-                }
-
-                calendario.appendChild(el);
-            }
-
-            listarFeriadosDoMes(ano, mes, todosFeriados);
-        }
-
-        function proximoMes() {
-            mesAtual++;
-            if (mesAtual > 11) {
-                mesAtual = 0;
-                anoAtual++;
-            }
-            gerarCalendario(anoAtual, mesAtual);
-        }
-
-        function mesAnterior() {
-            mesAtual--;
-            if (mesAtual < 0) {
-                mesAtual = 11;
-                anoAtual--;
-            }
-            gerarCalendario(anoAtual, mesAtual);
-        }
-
-        gerarCalendario(anoAtual, mesAtual);
-
-        if ("serviceWorker" in navigator) {
-            navigator.serviceWorker.register("/sw.js")
-                .then(reg => {
-
-                    if (reg.waiting) {
-                        reg.waiting.postMessage({ type: "SKIP_WAITING" });
-                    }
-
-                    reg.addEventListener("updatefound", () => {
-                        const newWorker = reg.installing;
-
-                        newWorker.addEventListener("statechange", () => {
-                            if (
-                                newWorker.state === "installed" &&
-                                navigator.serviceWorker.controller
-                            ) {
-                                newWorker.postMessage({ type: "SKIP_WAITING" });
-                            }
-                        });
-                    });
-
-                    navigator.serviceWorker.addEventListener(
-                        "controllerchange",
-                        () => window.location.reload()
-                    );
-
-                })
-                .catch(err => {
-                    console.error("Erro ao registrar Service Worker:", err);
-                });
-        }
-
-    </script>
 </body>
 </html>
 
