--- a/mobile/index.html
+++ b/mobile/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="icon-256.png" type="image/png">
 
-    <!-- Versão 1.2.2 -->
+    <!-- Versão 1.2.3 -->
 
     <style>
         body {
@@ -169,7 +169,7 @@
         <div class="header-left">
             <img src="/icon-256.png" class="logo">
             <h1>CycleCal</h1>
-            <span class="version">v1.2.2</span>
+            <span class="version">v1.2.3</span>
         </div>
 
         <button class="btn-hoje" id="btnHoje" onclick="irParaHoje()"></button>
@@ -412,9 +412,71 @@ function mesAnterior() {
 
 gerarCalendario(anoAtual, mesAtual);
 
+/* ===== KEYBOARD NAVIGATION v1.2.3 ===== */
+
+document.addEventListener("keydown", function(e) {
+
+    if (e.target.tagName === "INPUT") return;
+
+    switch (e.key) {
+        case "ArrowLeft":
+            mesAnterior();
+            break;
+
+        case "ArrowRight":
+            proximoMes();
+            break;
+
+        case "ArrowUp":
+            anoAtual--;
+            gerarCalendario(anoAtual, mesAtual);
+            break;
+
+        case "ArrowDown":
+            anoAtual++;
+            gerarCalendario(anoAtual, mesAtual);
+            break;
+    }
+
+});
+
+/* ===== SWIPE NAVIGATION v1.2.3 ===== */
+
+let touchStartX = 0;
+let touchStartY = 0;
+
+const calendarioEl = document.getElementById("calendario");
+
+calendarioEl.addEventListener("touchstart", function(e) {
+    const touch = e.changedTouches[0];
+    touchStartX = touch.screenX;
+    touchStartY = touch.screenY;
+}, { passive: true });
+
+calendarioEl.addEventListener("touchend", function(e) {
+    const touch = e.changedTouches[0];
+
+    const deltaX = touch.screenX - touchStartX;
+    const deltaY = touch.screenY - touchStartY;
+
+    const threshold = 50;
+
+    // Ignorar se movimento for mais vertical que horizontal
+    if (Math.abs(deltaY) > Math.abs(deltaX)) return;
+
+    if (deltaX > threshold) {
+        mesAnterior();
+    } else if (deltaX < -threshold) {
+        proximoMes();
+    }
+
+}, { passive: true });
+
+
 if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("/sw.js");
+    navigator.serviceWorker.register("sw.js");
 }
+
 </script>
 
 </body>
